project-visualforce/TeamListPackage/main/default/objects/Participant__c/Participant__c.object-meta.xml
<CustomObject>
    <description>Battle participants for Pokemon App</description>
    <label>Participant</label>
    <nameField>
        <label>Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>