project-visualforce/TeamListPackage/main/default/objects/Participant__c/fields/Battle__c.field-meta.xml
<CustomField>
    <fullName>Battle__c</fullName>
    <description>The participant&apos;s battle</description>
    <inlineHelpText>Select this participant&apos;s battle.</inlineHelpText>
    <label>Battle</label>
    <referenceTo>Battle__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>