project-visualforce/TeamListPackage/main/default/objects/Participant__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team participating in a battle</description>
    <inlineHelpText>Select a team that will be participating.</inlineHelpText>
    <label>Team</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Team__c.Trainer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Trainer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>