project-visualforce/TeamListPackage/main/default/objects/Participant__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Trainer participating in a battle</description>
    <inlineHelpText>Select a trainer who will be participating.</inlineHelpText>
    <label>Trainer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>